more tests added test for user student and instructor where i test their registration, login,